Add optional docker login to pull from private repos

--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -10,7 +10,7 @@ on:
       DOCKER_IMAGE_NAME:
         required: true
 jobs:
-  docker-build:
+  docker-build-push:
     runs-on: ubuntu-latest
     timeout-minutes: 10
     steps:
