--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,6 +11,10 @@ on:
         required: true
       SSH_PORT:
         required: true
+      DOCKERHUB_USERNAME:
+        required: false
+      DOCKERHUB_TOKEN:
+        required: false
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -18,6 +22,12 @@ jobs:
     steps:
       - name: ☁️ Checkout Repository
         uses: actions/checkout@v4
+
+      - name: 🗝️ Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: 🗝️ Configure ssh connection
         env:
