Add job names to the correct location

--- a/.github/workflows/build-app.yml
+++ b/.github/workflows/build-app.yml
@@ -1,12 +1,11 @@
-name: 🏗️ Build App
-
 on:
   workflow_call:
     secrets:
       DOTENV_KEY:
         required: false
 jobs:
-  app-build:
+  build-app:
+    name: 🏗️ Build App
     runs-on: ubuntu-latest
     timeout-minutes: 10
 
