--- a/.github/workflows/build-app.yml
+++ b/.github/workflows/build-app.yml
@@ -20,6 +20,8 @@ jobs:
 
       - name: 📦 Install dependencies
         uses: bahmutov/npm-install@v1
+        env:
+          NODE_ENV: production
 
       - name: 🏗️ Build Application
         env:
