--- a/.github/workflows/client-ci-cd.yml
+++ b/.github/workflows/client-ci-cd.yml
@@ -3,8 +3,12 @@ on:
     inputs:
       environment:
         type: string
-        required: false
+        required: true
         description: 'Environment for deployment'
+      docker_image_tag:
+        type: string
+        required: true
+        description: 'Image name and tag to be deployed to docker'
     secrets:
       DOTENV_KEY:
         required: false
@@ -176,7 +180,7 @@ jobs:
         with:
           context: .
           push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ secrets.DOCKER_IMAGE_NAME }}:latest
+          tags: ${{ inputs.docker_image_tag }}
           platforms: linux/amd64,linux/arm64
 
   deploy:
