--- a/.github/workflows/cd-client.yml
+++ b/.github/workflows/cd-client.yml
@@ -9,6 +9,10 @@ on:
         type: string
         required: true
         description: 'Image name and tag to be deployed to docker'
+      dockercompose_filename:
+        type: string
+        required: true
+        description: 'Docker compose file name to deploy'
     secrets:
       DOTENV_KEY:
         required: false
@@ -35,83 +39,6 @@ on:
   workflow_dispatch:
 
 jobs:
-  lint:
-    name: 🧑‍💻 Lint
-    runs-on: ubuntu-latest
-    environment: ${{inputs.environment}}
-    timeout-minutes: 10
-    steps:
-      - name: ☁️ Checkout Repository
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-
-      - name: 🔧 Setup node
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20
-
-      - name: 🔧 Install npm@latest
-        run: npm i -g npm@latest
-
-      - name: 📦 Install dependencies
-        uses: bahmutov/npm-install@v1
-
-      - name: 🔍 Lint Code Base
-        run: npm run lint --if-present
-
-  test:
-    name: 🧪 Test
-    runs-on: ubuntu-latest
-    environment: ${{inputs.environment}}
-    timeout-minutes: 10
-    steps:
-      - name: ☁️ Checkout Repository
-        uses: actions/checkout@v4
-
-      - name: 🔧 Setup node
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20
-
-      - name: 📦 Install dependencies
-        uses: bahmutov/npm-install@v1
-
-      - name: 🔍 Run tests
-        run: npm run test --if-present
-
-  codeQL:
-    name: 🔍 CodeQL
-    runs-on: ubuntu-latest
-    environment: ${{inputs.environment}}
-    timeout-minutes: 10
-    permissions:
-      actions: read
-      contents: read
-      security-events: write
-    strategy:
-      fail-fast: false
-      matrix:
-        language:
-          - javascript-typescript
-
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Initialize CodeQL
-        uses: github/codeql-action/init@v3
-        with:
-          languages: javascript-typescript
-
-      - name: Autobuild
-        uses: github/codeql-action/autobuild@v3
-
-      - name: Perform CodeQL Analysis
-        uses: github/codeql-action/analyze@v3
-        with:
-          category: '/language:${{matrix.language}}'
-
   build-app:
     name: 🏗️ Build App
     environment: ${{inputs.environment}}
@@ -150,6 +77,7 @@ jobs:
     environment: ${{inputs.environment}}
     runs-on: ubuntu-latest
     timeout-minutes: 10
+    needs: build-app
     steps:
       - name: ☁️ Checkout Repository
         uses: actions/checkout@v4
@@ -185,6 +113,7 @@ jobs:
     environment: ${{inputs.environment}}
     runs-on: ubuntu-latest
     timeout-minutes: 10
+    needs: docker-build-push
     steps:
       - name: ☁️ Checkout Repository
         uses: actions/checkout@v4
@@ -204,11 +133,11 @@ jobs:
           ssh-agent -a $SSH_AUTH_SOCK > /dev/null
           ssh-add - <<< "${{ secrets.SSH_KEY }}"
 
-      - name: 😎 Deploy to production server
+      - name: 😎 Deploy to server
         env:
           DOCKER_HOST: ssh://${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:${{ secrets.SSH_PORT }}
           SSH_AUTH_SOCK: /tmp/ssh_agent.sock
         run: |
-          docker compose -f docker-compose.prod.yml down -v || true \
-          && docker compose -f docker-compose.prod.yml pull \
-          && docker compose -f docker-compose.prod.yml up -d
+          docker compose -f ${{inputs.dockercompose_filename}}.yml down -v || true \
+          && docker compose -f ${{inputs.dockercompose_filename}}.yml pull \
+          && docker compose -f ${{inputs.dockercompose_filename}}.yml up -d
