--- a/.github/workflows/cd-client.yml
+++ b/.github/workflows/cd-client.yml
@@ -39,11 +39,11 @@ on:
   workflow_dispatch:
 
 jobs:
-  build-app:
-    name: 🏗️ Build App
+  cd:
+    name: 🚀 Continous Deployment
     environment: ${{inputs.environment}}
     runs-on: ubuntu-latest
-    timeout-minutes: 10
+    timeout-minutes: 15
 
     steps:
       - name: ☁️ Checkout Repository
@@ -57,13 +57,13 @@ jobs:
       - name: 📦 Install dependencies
         uses: bahmutov/npm-install@v1
 
-      - name: 🔧 Remove dev dependencies
-        run: npm prune --production
-
       - name: 🏗️ Build Application
         env:
           DOTENV_KEY: ${{ secrets.DOTENV_KEY }}
         run: npm run build
+
+      - name: 🔧 Remove dev dependencies
+        run: npm prune --production
 
       - name: 📁 Archive build output
         uses: actions/upload-artifact@v4
@@ -71,16 +71,6 @@ jobs:
           name: build
           path: dist
           if-no-files-found: error
-
-  docker-build-push:
-    name: 📦 Docker Build/Push
-    environment: ${{inputs.environment}}
-    runs-on: ubuntu-latest
-    timeout-minutes: 10
-    needs: build-app
-    steps:
-      - name: ☁️ Checkout Repository
-        uses: actions/checkout@v4
 
       - name: 📁 Download build output
         uses: actions/download-artifact@v4
@@ -108,16 +98,6 @@ jobs:
           tags: ${{ inputs.docker_image_tag }}
           platforms: linux/amd64,linux/arm64
 
-  deploy:
-    name: 📦 Deploy build
-    environment: ${{inputs.environment}}
-    runs-on: ubuntu-latest
-    timeout-minutes: 10
-    needs: docker-build-push
-    steps:
-      - name: ☁️ Checkout Repository
-        uses: actions/checkout@v4
-
       - name: 🗝️ Login to Docker Hub
         uses: docker/login-action@v3
         with:
@@ -133,7 +113,7 @@ jobs:
           ssh-agent -a $SSH_AUTH_SOCK > /dev/null
           ssh-add - <<< "${{ secrets.SSH_KEY }}"
 
-      - name: 😎 Deploy to server
+      - name: 😎 Deploy to remote server
         env:
           DOCKER_HOST: ssh://${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:${{ secrets.SSH_PORT }}
           SSH_AUTH_SOCK: /tmp/ssh_agent.sock
