--- a/.github/workflows/cd-client.yml
+++ b/.github/workflows/cd-client.yml
@@ -60,26 +60,9 @@ jobs:
       - name: 🏗️ Build Application
         env:
           DOTENV_KEY: ${{ secrets.DOTENV_KEY }}
-        run: npm run build
-
-      - name: 🔧 Remove dev dependencies
-        run: npm prune --production
-
-      - name: 📁 Archive build output
-        uses: actions/upload-artifact@v4
-        with:
-          name: build
-          path: dist
-          if-no-files-found: error
-
-      - name: 📁 Download build output
-        uses: actions/download-artifact@v4
-        with:
-          name: build
-          path: build
-
-      - name: 👓 Display structure of downloaded files
-        run: ls -R build
+        run: |
+          npm run build
+          npm prune --production
 
       - name: 🦈 Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -98,12 +81,6 @@ jobs:
           tags: ${{ inputs.docker_image_tag }}
           platforms: linux/amd64,linux/arm64
 
-      - name: 🗝️ Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
       - name: 🗝️ Configure ssh connection
         env:
           SSH_AUTH_SOCK: /tmp/ssh_agent.sock
@@ -118,6 +95,6 @@ jobs:
           DOCKER_HOST: ssh://${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:${{ secrets.SSH_PORT }}
           SSH_AUTH_SOCK: /tmp/ssh_agent.sock
         run: |
-          docker compose -f ${{inputs.dockercompose_filename}}.yml down -v || true \
-          && docker compose -f ${{inputs.dockercompose_filename}}.yml pull \
-          && docker compose -f ${{inputs.dockercompose_filename}}.yml up -d
+          docker compose -f ${{inputs.dockercompose_filename}} down -v || true \
+          && docker compose -f ${{inputs.dockercompose_filename}} pull \
+          && docker compose -f ${{inputs.dockercompose_filename}} up -d
