--- a/.github/workflows/cd-client.yml
+++ b/.github/workflows/cd-client.yml
@@ -61,8 +61,8 @@ jobs:
         env:
           DOTENV_KEY: ${{ secrets.DOTENV_KEY }}
         run: |
-          npm run build
           npm prune --production
+          npm run build
 
       - name: 🦈 Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -77,7 +77,7 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
-          push: ${{ github.event_name != 'pull_request' }}
+          push: true
           tags: ${{ inputs.docker_image_tag }}
           platforms: linux/amd64,linux/arm64
 
