--- a/.github/workflows/cd-client.yml
+++ b/.github/workflows/cd-client.yml
@@ -62,7 +62,7 @@ jobs:
           DOTENV_KEY: ${{ secrets.DOTENV_KEY }}
         run: |
           npm run build
-          npm run prune --omit=dev
+          npm prune --omit=dev
 
       - name: 🦈 Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
