--- a/.github/workflows/ci-cd-client.yml
+++ b/.github/workflows/ci-cd-client.yml
@@ -136,6 +136,7 @@ jobs:
           && docker compose -f docker-compose.dev.yml up -d
 
   deploy-to-prod:
+    if: ${{ github.event_name == 'push' &&  github.ref == 'refs/heads/main'}}
     name: 🚀 Deploy to PROD
     environment: Production
     runs-on: ubuntu-latest
