Add environment variable to build step

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,6 +50,7 @@ jobs:
 
       - name: 🏗️ Build Application
         env:
+          environment: ${{inputs.environment}}
           DOTENV_KEY: ${{ secrets.DOTENV_KEY }}
         run: |
           npm run build
