--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,5 @@
 on:
   workflow_call:
-    inputs:
-      docker_image_tag:
-        type: string
-        required: true
-        description: 'Image name and tag to be deployed to docker'
     secrets:
       DOTENV_KEY:
         required: false
@@ -15,12 +10,25 @@ on:
       DOCKERHUB_TOKEN:
         required: true
         description: 'Token for Docker Hub authentication'
-  workflow_dispatch:
+    inputs:
+      environment:
+        type: string
+        required: true
+        default: Staging
+      docker_image_tag:
+        type: string
+        required: true
+        description: 'Image name and tag to be deployed to docker'
+      target:
+        type: string
+        required: false
+        default: dev
+        description: 'Sets the target stage in dockerfile to build'
 jobs:
   ci:
-    name: 🧑‍💻 Continous Integration
     runs-on: ubuntu-latest
     timeout-minutes: 15
+    environment: ${{inputs.environment}}
 
     steps:
       - name: ☁️ Checkout Repository
@@ -40,13 +48,6 @@ jobs:
       - name: 🔍 Run tests
         run: npm run test --if-present
 
-      - name: 🏗️ Build Application
-        env:
-          DOTENV_KEY: ${{ secrets.DOTENV_KEY }}
-        run: |
-          npm run build
-          npm prune --omit=dev
-
       - name: 🦈 Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
@@ -60,6 +61,8 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
+          build-args: ${{secrets.DOTENV_KEY}}
+          target: ${{inputs.target}}
           push: true
           tags: ${{ inputs.docker_image_tag }}
           platforms: linux/amd64,linux/arm64
