--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,10 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 15
     environment: ${{inputs.environment}}
+    permissions:
+      actions: read
+      contents: read
+      security-events: write
 
     steps:
       - name: ☁️ Checkout Repository
@@ -29,3 +33,16 @@ jobs:
 
       - name: 🔍 Run tests
         run: npm run test --if-present
+
+      - name: 🔍 CodeQL - Initialize
+        uses: github/codeql-action/init@v3
+        with:
+          languages: javascript-typescript
+
+      - name: 📦 CodeQL - Autobuild
+        uses: github/codeql-action/autobuild@v3
+
+      - name: 🔍 CodeQL - Perform Analysis
+        uses: github/codeql-action/analyze@v3
+        with:
+          category: '/language:javascript-typescript'
