Add QEMU support

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -58,7 +58,10 @@ jobs:
       - name: 📦 Install dependencies
         uses: bahmutov/npm-install@v1
 
-      - name: 🦈 Set up Docker Buildx
+      - name: 🔧 Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: 🔧 Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
       - name: 🗝️ Login to Docker Hub
