--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,15 @@ on:
         type: string
         required: true
         default: Staging
+      target:
+        type: string
+        required: true
+        default: dev
+        description: 'Sets the target stage in dockerfile to build'
+      docker_image_tag:
+        type: string
+        required: true
+        description: 'Image name and tag to be deployed to docker'
 
 jobs:
   ci:
@@ -46,3 +55,33 @@ jobs:
         uses: github/codeql-action/analyze@v3
         with:
           category: '/language:javascript-typescript'
+
+      - name: 🔧 Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: 🔧 Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: 🗝️ Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: 🏗️ Build Application
+        env:
+          DOTENV_KEY: ${{ secrets.DOTENV_KEY }}
+        run: |
+          npm run build
+          npm prune --omit=dev
+
+      - name: 📦 Build and push Docker image
+        uses: docker/build-push-action@v5
+        env:
+          DOTENV_KEY: ${{ secrets.DOTENV_KEY }}
+        with:
+          context: .
+          target: ${{inputs.target}}
+          push: true
+          tags: ${{ inputs.docker_image_tag }}
+          platforms: linux/amd64,linux/arm64
