--- a/.gitignore
+++ b/.gitignore
@@ -166,7 +166,7 @@ dist
 !.vscode/*.code-snippets
 
 # Local History for Visual Studio Code
-.history/
+.history
 
 # Built Visual Studio Code Extensions
 *.vsix
