--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,61 +3,51 @@ on:
     secrets:
       DOCKERHUB_USERNAME:
         required: true
-        description: 'Username for Docker Hub'
       DOCKERHUB_TOKEN:
         required: true
-        description: 'Token for Docker Hub authentication'
-      SSH_HOST:
+      DOCKER_IMAGE_NAME:
         required: true
-        description: 'SSH host for deployment'
-      SSH_KEY:
+      GPG_PUBLIC_KEY:
         required: true
-        description: 'SSH private key for deployment'
-      SSH_USER:
+      GPG_PRIVATE_KEY:
         required: true
-        description: 'SSH username for deployment'
-      SSH_PORT:
+      NGINX_PORT:
         required: true
-        description: 'SSH port for deployment'
     inputs:
+      target:
+        type: string
+        default: 'prod'
+      docker_image_tag:
+        type: string
+        required: true
       environment:
         type: string
         required: true
-      dockercompose_filename:
-        type: string
+      nginx_port:
+        type: number
         required: true
 jobs:
-  deploy:
+  build:
+    name: 📦 Build
     runs-on: ubuntu-latest
-    timeout-minutes: 15
+    timeout-minutes: 10
     environment: ${{inputs.environment}}
-
     steps:
       - name: ☁️ Checkout Repository
         uses: actions/checkout@v4
 
-      - name: 🔧 Setup node
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20
+      - name: 🔧 Set up QEMU
+        uses: docker/setup-qemu-action@v3
 
-      - name: 📦 Install dependencies
-        uses: bahmutov/npm-install@v1
-
-      - name: 🗝️ Configure ssh connection
-        env:
-          SSH_AUTH_SOCK: /tmp/ssh_agent.sock
-        run: |
-          mkdir -p ~/.ssh
-          ssh-keyscan -p ${{ secrets.SSH_PORT }} -t rsa ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
-          ssh-agent -a $SSH_AUTH_SOCK > /dev/null
-          ssh-add - <<< "${{ secrets.SSH_KEY }}"
+      - name: 🦈 Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
       - name: 🗝️ Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+
       - name: 🗝️ Setup GPG
         run: |
           sudo apt-get update
@@ -85,12 +75,35 @@ jobs:
               fi
           done
 
-      - name: 🚀 Deploy
-        env:
-          DOCKER_HOST: ssh://${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:${{ secrets.SSH_PORT }}
-          DOTENV_KEY: ${{secrets.DOTENV_KEY}}
-          SSH_AUTH_SOCK: /tmp/ssh_agent.sock
+      - name: 🏗️ Build Application
         run: |
-          docker compose -f ${{inputs.dockercompose_filename}} down -v || true \
-          && docker compose -f ${{inputs.dockercompose_filename}} pull \
-          && docker compose -f ${{inputs.dockercompose_filename}} up -d
+          if [ "${{ inputs.environment }}" = "Production" ]; then
+            npm run build
+          else
+            npm run build:staging
+          fi
+
+      - name: 📁 Archive build output
+        uses: actions/upload-artifact@v4
+        with:
+          name: build
+          path: dist
+          if-no-files-found: error
+
+      - name: 📁 Download build output
+        uses: actions/download-artifact@v4
+        with:
+          name: build
+          path: dist
+
+      - name: 👓 Display structure of downloaded files
+        run: ls -R dist
+
+      - name: 📦 Build and push Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          target: ${{inputs.target}}
+          push: true
+          tags: ${{ inputs.docker_image_tag }}
+          platforms: linux/amd64,linux/arm64
