--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,10 +1,19 @@
 on:
   workflow_call:
+    inputs:
+      environment:
+        type: string
+        required: true
 jobs:
   test:
-    name: 🧪 Test
     runs-on: ubuntu-latest
-    timeout-minutes: 10
+    timeout-minutes: 15
+    environment: ${{inputs.environment}}
+    permissions:
+      actions: read
+      contents: read
+      security-events: write
+
     steps:
       - name: ☁️ Checkout Repository
         uses: actions/checkout@v4
@@ -17,5 +26,21 @@ jobs:
       - name: 📦 Install dependencies
         uses: bahmutov/npm-install@v1
 
-      - name: 🔍 Run tests
+      - name: 🔍 Lint Code Base
+        run: npm run lint --if-present
+
+      - name: 🧪 Run tests
         run: npm run test --if-present
+
+      - name: 🔍 CodeQL - Initialize
+        uses: github/codeql-action/init@v3
+        with:
+          languages: javascript-typescript
+
+      - name: 📦 CodeQL - Autobuild
+        uses: github/codeql-action/autobuild@v3
+
+      - name: 🔍 CodeQL - Perform Analysis
+        uses: github/codeql-action/analyze@v3
+        with:
+          category: '/language:javascript-typescript'
