--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,7 +3,7 @@ on:
 
 jobs:
   test:
-    name: 🧪 Lint | Test | Vulnerability scan
+    name: 🧪 Lint | Test
     runs-on: ubuntu-latest
     timeout-minutes: 15
     permissions:
@@ -28,12 +28,3 @@ jobs:
 
       - name: 🧪 Run tests
         run: npm run test --if-present
-
-      - name: 🔍 CodeQL - Initialize
-        uses: github/codeql-action/init@v3
-
-      - name: 📦 CodeQL - Autobuild
-        uses: github/codeql-action/autobuild@v3
-
-      - name: 🔍 CodeQL - Perform Analysis
-        uses: github/codeql-action/analyze@v3
